samples/_failures_safe/1761399208_ae9df2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96e01bdd.c: In function ‘main’:
./samples/SAFE/__tmp_96e01bdd.c:152:5: error: expected expression at end of input
  152 |     int unique_count = count_unique_words(words, word_count,
      |     ^~~
./samples/SAFE/__tmp_96e01bdd.c:152:5: error: expected declaration or statement at end of input
